--- a/punch.html
+++ b/punch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Monster Buster</title>
     <link rel="stylesheet" href="./common.css">
 </head>
 <body onselectstart="return false;" style="cursor: default;">
